changed files INDEX

--- a/pdarxiv/templates/pdarxiv/home.html
+++ b/pdarxiv/templates/pdarxiv/home.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'pdarxiv/style.css' %}">
 
 
-    <title>Авторизация</title>
+    <title>Авторизация на сайте</title>
 </head>
 <div class="bodylogin">
     {% if user.is_authenticated %}
