--- a/pdarxiv/templates/pdarxiv/index-destroy.html
+++ b/pdarxiv/templates/pdarxiv/index-destroy.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="{% static 'pdarxiv/bootstrap/css/bootstrap.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'pdarxiv/style.css' %}">
+    <link rel="icon" href="{% static 'pdarxiv/favicon.ico' %}" type="image/x-icon">
     <title>Формирование описи</title>
 </head>
 <body>
