--- a/pdarxiv/static/pdarxiv/style.css
+++ b/pdarxiv/static/pdarxiv/style.css
@@ -119,6 +119,7 @@
     font-size: 1.1rem;
     display: block;
     text-align: center;
+    box-shadow: 0 0 4px #0d6efd;
     border:2px solid #0d6efd;
     border-radius: 10px;
     background-color: rgba(219, 227, 255, 0.50);
