--- a/pdarxiv/templates/pdarxiv/arxdelo.html
+++ b/pdarxiv/templates/pdarxiv/arxdelo.html
@@ -66,7 +66,7 @@
         <span class="arxdelo_fv">Примечание:</span> <p></p>
         <span class="arxdelo_prim">{% if arxdelo.post %} {{ arxdelo.post }} {% endif %}</span>
         </div><br>
-        <p class="recstat text-center fst-italic fs-5 shadow-sm p-3">Запись создана:  {{ arxdelo.user_create}} {{ arxdelo.date_create|date:"d-m-Y" }} г., Запись отредактирована:  {{ arxdelo.user_update}} {{ arxdelo.date_update|date:"d-m-Y" }} г.</p>
+        <p class="recstat text-center fst-italic fs-5 shadow-sm p-3">Запись создана:  {{ arxdelo.fuser_create}} {{ arxdelo.date_create|date:"d-m-Y" }} г., Запись отредактирована:  {{ arxdelo.fuser_update}} {{ arxdelo.date_update|date:"d-m-Y" }} г.</p>
         <br>
               
         </div>
