--- a/pdarxiv/templates/pdarxiv/index.html
+++ b/pdarxiv/templates/pdarxiv/index.html
@@ -16,7 +16,7 @@
     <header class="header">
         <div class="container-md" >
             <div class="row">
-              <div class="col-md text-center"> <h1>Реестр пенсионных дел, сданных в Архив</h1></div>
+              <div class="col-md text-center p-2 fw-bolder mainhedslogan"> <h1>Реестр пенсионных дел, сданных в Архив</h1></div>
             </div>
           </div>  
     </header>
