--- a/pdarxiv/templates/pdarxiv/create.html
+++ b/pdarxiv/templates/pdarxiv/create.html
@@ -17,7 +17,7 @@
     <header class="header">
         <div class="container-md" >
             <div class="row">
-              <div class="col-md text-center"> <h1>Реестр пенсионных дел, сданных в Архив</h1></div>
+              <div class="col-md text-center mainhedslogan"> <h1>Реестр пенсионных дел, сданных в Архив</h1></div>
             </div>
           </div>  
     </header>
