надо проверить на постгресе как работает проверка на вид пенсии

--- a/pdarxiv/templates/pdarxiv/_base.html
+++ b/pdarxiv/templates/pdarxiv/_base.html
@@ -2,7 +2,7 @@
 {% load bootstrap %}
 {% load filter_extras %}
 {% block headersite %}
-
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
