--- a/pdarxiv/static/pdarxiv/style.css
+++ b/pdarxiv/static/pdarxiv/style.css
@@ -12,18 +12,18 @@
     margin-top: 1rem;
 }
 .pdlist, .pdtbl {
-    margin-top: 1rem;
+
     margin-bottom: 1rem;
 }
 .pdlist {
-    font-size: 0.9rem;
-    width:852px;
+    font-size: 0.8rem;
+
 }
 .pdlistdestroy {
-    font-size: 0.9rem;
+    font-size: 0.8rem;
 }
 .pad {
-    font-size: 0.8rem;
+    font-size: 0.7rem;
 }
 .pdtbl{
     border-bottom: black 1px;
@@ -39,7 +39,7 @@
 .formone, .arxdelo {
     background-color: #e9e9ed29;
     line-height: 0.95rem;
-    font-size: 00.95rem;
+    font-size: 0.95rem;
 }
 .formadd, .arxdelo_f {
     margin-left: 25%;
@@ -57,9 +57,9 @@
    margin-bottom: 10px;
 }
 .err1 {
-    font-size: 0.7rem;
+    font-size: 0.6rem;
     display: flex;
-    line-height: 0.6rem;
+    line-height: 0.5rem;
     flex-direction: column;
     flex-wrap: nowrap;
     align-items: flex-start;
@@ -106,7 +106,7 @@
 }
 .formsearch {
     float: left;
-    width: 170px;
+    width: 100%;
     height: 100vh;
     font-size: 0.7rem;
 }
@@ -131,7 +131,7 @@
 }
 
 .btnspd {
-    width: 170px;
+    width: 100%;
 }
 .tabdest tbody tr td {
     padding: 0.2rem 0.5rem;
