--- a/pdarxiv/templates/pdarxiv/_basearxdelo.html
+++ b/pdarxiv/templates/pdarxiv/_basearxdelo.html
@@ -47,7 +47,7 @@
         </div>
         <div class="border-end border-start border-bottom p-3">
         <p><span class="arxdelo_ft">Адрес: </span><span class="arxdelo_fv">Почтовый индекс </span>{{ arxdelo.zind}}</p>
-        <p><span class="arxdelo_ft"></span><span class="arxdelo_fv">Населенный пункт</span>{{ gor }}</p>
+        <p><span class="arxdelo_ft"></span><span class="arxdelo_fv">Населенный пункт</span>{{ arxdelo.gor }}</p>
         <p><span class="arxdelo_ft"></span><span class="arxdelo_fv">Улица</span>{{ arxdelo.ul }}</p>
         <p><span class="arxdelo_ft"></span><span class="arxdelo_fv-small">Дом</span>{{ arxdelo.dom }}&nbsp;&nbsp;
             <span class="arxdelo_fv-small">Корпус</span>{% if arxdelo.kor %}  {{ arxdelo.kor }} {% endif %}&nbsp;&nbsp;
@@ -76,9 +76,10 @@
         </div>
     </div>
 {% endblock contentdelo%}
-
-</body>
 {% block footersite %}
+{% endblock %}
+</body>
+{% block scripts %}
     <script src="{% static 'pdarxiv/js/jquery-3.3.1.min.js' %}"></script>
     <script src="{% static 'pdarxiv/js/jquery.mask.js' %}"></script>
 {% endblock %}
